--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:orientation="vertical">
+
+
+
+
         <TextView
             android:id="@+id/paris_fashion_week_view"
             style="@style/AligableText"
@@ -32,8 +41,8 @@
             android:layout_width="@dimen/state_width"
             android:layout_height="@dimen/state_height"
             android:layout_marginBottom="@dimen/margin_bottom_state"
-            android:gravity="center"
             android:background="@drawable/oval_text_view"
+            android:gravity="center"
             android:text="@string/state_text"
             android:textSize="@dimen/perform_size" />
 
@@ -135,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_bottom_start"
                 android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".3"
+                android:layout_weight=".4"
                 android:text="@string/alexander_mc_queen"
                 android:textSize="@dimen/layout_text_size" />
 
@@ -144,7 +153,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".4"
+                android:layout_weight=".3"
                 android:text="@string/stockholmfall"
                 android:textSize="@dimen/layout_text_size"
 
@@ -205,16 +214,22 @@
             android:layout_marginTop="@dimen/margin_top"
             android:text="@string/description"
             android:textSize="@dimen/description_text_size" />
+        </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/my_recycler_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/margin_top"
-            android:layout_height="match_parent"
-            android:scrollbars="horizontal"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5">
 
-            />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/my_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/margin_top"
+                android:scrollbars="horizontal"
 
+                />
+        </LinearLayout>
 
     </LinearLayout>
 
