--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,22 +1,23 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="title_text_view_height">40dp</dimen>
-    <dimen name="title_fashion_tsize">20sp</dimen>
-    <dimen name="margin_bot">5dp</dimen>
-    <dimen name="margin_top">5dp</dimen>
-    <dimen name="perform_size">8sp</dimen>
-    <dimen name="title_margin_bot">1dp</dimen>
-    <dimen name="state_width">50dp</dimen>
-    <dimen name="state_height">20dp</dimen>
-    <dimen name="margin_bottom_state">3dp</dimen>
-    <dimen name="margin_bottom_start">5dp</dimen>
-    <dimen name="layout_text_size">14sp</dimen>
-    <dimen name="start_date">14sp</dimen>
-    <dimen name="lines_height">1dp</dimen>
-    <dimen name="general_layout_width">1dp</dimen>
-    <dimen name="description_text_size">10sp</dimen>
+<!-- Default screen margins, per the Android Design guidelines. -->
+<dimen name="activity_horizontal_margin">16dp</dimen>
+<dimen name="activity_vertical_margin">16dp</dimen>
+<dimen name="fab_margin">16dp</dimen>
+<dimen name="title_text_view_height">40dp</dimen>
+<dimen name="title_fashion_tsize">20sp</dimen>
+<dimen name="margin_bot">5dp</dimen>
+<dimen name="margin_top">5dp</dimen>
+<dimen name="perform_size">8sp</dimen>
+<dimen name="title_margin_bot">1dp</dimen>
+<dimen name="state_width">50dp</dimen>
+<dimen name="state_height">20dp</dimen>
+<dimen name="margin_bottom_state">3dp</dimen>
+<dimen name="margin_bottom_start">5dp</dimen>
+<dimen name="layout_text_size">14sp</dimen>
+<dimen name="start_date">14sp</dimen>
+<dimen name="lines_height">1dp</dimen>
+<dimen name="general_layout_width">1dp</dimen>
+<dimen name="description_text_size">10sp</dimen>
+    <dimen name="padding">5dp</dimen>
 
 </resources>
