--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -226,6 +226,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_top"
+                android:padding="@dimen/padding"
                 android:scrollbars="horizontal"
 
                 />
