--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -223,6 +223,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
+                android:padding="@dimen/padding"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_top"
