--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,195 +39,209 @@ SOFTWARE.-->
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/paris_fashion_week_view"
-            style="@style/AligableText"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/title_text_view_height"
-            android:layout_marginBottom="@dimen/title_margin_bot"
-            android:text="@string/fashion_title"
-            android:textSize="@dimen/title_fashion_tsize" />
-
-        <TextView
-            android:id="@+id/text_state"
-            android:layout_width="@dimen/state_width"
-            android:layout_height="@dimen/state_height"
-            android:layout_marginBottom="@dimen/margin_bottom_state"
-            android:background="@drawable/oval_text_view"
-            android:gravity="center"
-            android:text="@string/state_text"
-            android:textSize="@dimen/perform_size" />
-
-        <TextView
-            style="@style/lineColor"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lines_height"
-            android:layout_marginBottom="@dimen/margin_bot"
-            android:layout_marginTop="@dimen/margin_top" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight=".5"
+            android:orientation="vertical">
+
 
             <TextView
-                android:id="@+id/start_show"
-                android:layout_width="@dimen/general_layout_width"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_bottom_start"
-                android:layout_weight=".5"
-                android:text="@string/starting"
-                android:textSize="@dimen/layout_text_size" />
+                android:id="@+id/paris_fashion_week_view"
+                style="@style/AligableText"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/title_text_view_height"
+                android:layout_marginBottom="@dimen/title_margin_bot"
+                android:text="@string/fashion_title"
+                android:textSize="@dimen/title_fashion_tsize" />
 
             <TextView
-                android:id="@+id/str_data"
-                android:layout_width="@dimen/general_layout_width"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:text="@string/start_date"
-                android:textSize="@dimen/layout_text_size"
+                android:id="@+id/text_state"
+                android:layout_width="@dimen/state_width"
+                android:layout_height="@dimen/state_height"
+                android:layout_marginBottom="@dimen/margin_bottom_state"
+                android:background="@drawable/oval_text_view"
+                android:gravity="center"
+                android:text="@string/state_text"
+                android:textSize="@dimen/perform_size" />
 
+            <TextView
+                style="@style/lineColor"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/lines_height"
+                android:layout_marginBottom="@dimen/margin_bot"
+                android:layout_marginTop="@dimen/margin_top" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/start_show"
+                    android:layout_width="@dimen/general_layout_width"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_weight=".5"
+                    android:text="@string/starting"
+                    android:textSize="@dimen/layout_text_size" />
+
+                <TextView
+                    android:id="@+id/str_data"
+                    android:layout_width="@dimen/general_layout_width"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".4"
+                    android:text="@string/start_date"
+                    android:textSize="@dimen/layout_text_size"
+
+
+                    />
+
+
+            </LinearLayout>
+
+            <TextView
+                style="@style/lineColor"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/lines_height"
+                android:layout_marginBottom="@dimen/margin_bot"
+                android:layout_marginTop="@dimen/margin_top" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/fin_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bot"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".4"
+                    android:text="@string/finish"
+                    android:textSize="@dimen/layout_text_size" />
+
+                <TextView
+                    android:id="@+id/fin_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bot"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".5"
+                    android:text="@string/finish_date"
+                    android:textSize="@dimen/layout_text_size" />
+
+
+            </LinearLayout>
+
+
+            <TextView
+                style="@style/lineColor"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/lines_height"
+                android:layout_marginBottom="@dimen/margin_bot"
 
                 />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        </LinearLayout>
 
-        <TextView
-            style="@style/lineColor"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lines_height"
-            android:layout_marginBottom="@dimen/margin_bot"
-            android:layout_marginTop="@dimen/margin_top" />
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/designer"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".4"
+                    android:text="@string/alexander_mc_queen"
+                    android:textSize="@dimen/layout_text_size" />
+
+                <TextView
+                    android:id="@+id/stockholm"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".3"
+                    android:text="@string/stockholmfall"
+                    android:textSize="@dimen/layout_text_size"
+
+                    />
+
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/fin_label"
+                style="@style/lineColor"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/lines_height"
+                android:layout_marginBottom="@dimen/margin_bot" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/channel_show"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".4"
+                    android:text="@string/channel"
+                    android:textSize="@dimen/layout_text_size" />
+
+
+                <TextView
+                    android:id="@+id/spring_coutre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_bottom_start"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:layout_weight=".5"
+                    android:text="@string/spring_couture"
+                    android:textSize="@dimen/layout_text_size"
+
+                    />
+
+            </LinearLayout>
+
+            <TextView
+                style="@style/lineColor"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/lines_height"
+                android:layout_marginBottom="@dimen/margin_bot"
+                android:layout_marginTop="@dimen/margin_top"
+
+                />
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_bot"
                 android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".4"
-                android:text="@string/finish"
-                android:textSize="@dimen/layout_text_size" />
-
-            <TextView
-                android:id="@+id/fin_data"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_bot"
-                android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".5"
-                android:text="@string/finish_date"
-                android:textSize="@dimen/layout_text_size" />
-
-
-        </LinearLayout>
-
-
-        <TextView
-            style="@style/lineColor"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lines_height"
-            android:layout_marginBottom="@dimen/margin_bot"
-
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
+                android:text="@string/description"
+                android:textSize="@dimen/description_text_size" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight=".7"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/designer"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_bottom_start"
-                android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".4"
-                android:text="@string/alexander_mc_queen"
-                android:textSize="@dimen/layout_text_size" />
-
-            <TextView
-                android:id="@+id/stockholm"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".3"
-                android:text="@string/stockholmfall"
-                android:textSize="@dimen/layout_text_size"
-
-                />
-
-
-        </LinearLayout>
-
-        <TextView
-            style="@style/lineColor"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lines_height"
-            android:layout_marginBottom="@dimen/margin_bot" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/channel_show"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_bottom_start"
-                android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".4"
-                android:text="@string/channel"
-                android:textSize="@dimen/layout_text_size" />
-
-
-            <TextView
-                android:id="@+id/spring_coutre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_bottom_start"
-                android:layout_marginTop="@dimen/margin_top"
-                android:layout_weight=".5"
-                android:text="@string/spring_couture"
-                android:textSize="@dimen/layout_text_size"
-
-                />
-
-        </LinearLayout>
-
-        <TextView
-            style="@style/lineColor"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lines_height"
-            android:layout_marginBottom="@dimen/margin_bot"
-            android:layout_marginTop="@dimen/margin_top"
-
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_bot"
-            android:layout_marginTop="@dimen/margin_top"
-            android:text="@string/description"
-            android:textSize="@dimen/description_text_size" />
-       
-
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
@@ -237,7 +251,7 @@ SOFTWARE.-->
                 android:scrollbars="horizontal"
 
                 />
-
+        </LinearLayout>
 
     </LinearLayout>
 
