--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -237,7 +237,7 @@ SOFTWARE.-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/layout_recycler"
             android:layout_weight=".7"
             android:orientation="vertical">
 
