--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -246,6 +246,7 @@ SOFTWARE.-->
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="@dimen/padding"
+                android:scrollbarStyle="insideInset"
                 android:scrollbars="horizontal"
 
                 />
