--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,8 +43,9 @@ SOFTWARE.-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_weight=".4"
-            android:orientation="vertical">
+            >
 
 
             <TextView
@@ -238,8 +239,9 @@ SOFTWARE.-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/layout_recycler"
+             android:orientation="vertical"
             android:layout_weight=".7"
-            android:orientation="vertical">
+            >
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
