--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -95,7 +95,7 @@ SOFTWARE.-->
                                                                            android:layout_weight=".4"
                                                                            android:text="@string/start_date"
                                                                            android:textSize="@dimen/layout_text_size"
-                                                                                     />
+                                                                                />
 
 
             </LinearLayout>
@@ -130,7 +130,8 @@ SOFTWARE.-->
                                                                              android:layout_marginTop="@dimen/margin_top"
                                                                              android:layout_weight=".5"
                                                                              android:text="@string/finish_date"
-                                                                             android:textSize="@dimen/layout_text_size" />
+                                                                             android:textSize="@dimen/layout_text_size" 
+                                                                                  />
 
 
             </LinearLayout>
@@ -213,7 +214,7 @@ SOFTWARE.-->
                                                                                  android:text="@string/spring_couture"
                                                                                  android:textSize="@dimen/layout_text_size"
 
-                                                                                   />
+                                                                                     />
 
             </LinearLayout>
 
