--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -248,6 +248,7 @@ SOFTWARE.-->
                 android:id="@+id/my_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="1dp"
                 android:scrollbarStyle="insideInset"
                 android:scrollbars="horizontal"
 
