--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-<!-- Default screen margins, per the Android Design guidelines. -->
+<!--MIT License
+
+Copyright (c) 2016 Synelnyk Anastasiya
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.-->
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.ce_1958687.MainActivity">
@@ -8,6 +28,12 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="always" />
-
+    <ListPreference
+        android:key="lang"
+        android:title="@string/LangTitle"
+        android:summary="@string/LangSummary"
+        android:entries="@array/entries_lang"
+        android:entryValues="@array/entryvalues_lang"
+        android:dialogTitle="@string/LangDialogTitle" />
 
 </menu>
