--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -237,17 +237,17 @@ SOFTWARE.-->
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/layout_recycler"
+         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
              android:orientation="vertical"
             android:layout_weight=".7"
             >
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/my_recycler_view"
-               android:layout_width="match_parent"
-               android:layout_height="@dimen/layout_recycler"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/rec_pad"
                 android:paddingRight="@dimen/rec_pad"
                
