--- a/app/src/main/res/layout/image_view.xml
+++ b/app/src/main/res/layout/image_view.xml
@@ -22,13 +22,13 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.-->
 <!-- Default screen margins, per the Android Design guidelines. -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
 android:orientation="vertical">
 
 <ImageView
     android:id="@+id/image_view_fashion"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_width="@dimen/photo_width"
+    android:layout_height="@dimen/photo_height" />
 
 </LinearLayout>
