--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,4 +3,21 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="title_text_view_height">40dp</dimen>
+    <dimen name="title_fashion_tsize">20sp</dimen>
+    <dimen name="margin_bot">5dp</dimen>
+    <dimen name="margin_top">5dp</dimen>
+    <dimen name="perform_size">16sp</dimen>
+    <dimen name="title_margin_bot">1dp</dimen>
+    <dimen name="margin_bottom_state">3dp</dimen>
+    <dimen name="layout_text_size">16sp</dimen>
+    <dimen name="padding">5dp</dimen>
+    <dimen name="lines_height">1dp</dimen>
+    <dimen name="general_layout_width">1dp</dimen>
+    <dimen name="description_text_size">16sp</dimen>
+    <dimen name="rec_pad">1dp</dimen>
+    <dimen name="photo_height">200dp</dimen>
+    <dimen name="photo_width">150dp</dimen>
 </resources>
