--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,4 +1,4 @@
-<resources>>
+<resources>
 <!--MIT License
 
 Copyright (c) 2016. Synelnyk Anastasiya
@@ -25,19 +25,10 @@ SOFTWARE.-->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/darker_gray</item>
     </style>
     
-    <style name="AligableText" parent="TextAppearance.AppCompat.Large.Inverse">
-        <item name="android:textColor">#000080</item>
-        <item name="android:textColorHighlight">#1E90FF</item>
 
 
-
-
-    </style>
-    <style name="lineColor" parent="Animation.Design.BottomSheetDialog">
-        <item name="android:background">#000000</item>
-    </style>
 
 </resources>
